feat: Load map style in iran

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <com.mapbox.maps.MapView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello World!"
+        android:id="@+id/mapView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
